@@ -20,11 +20,14 @@ import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.SurrogateExpression;
 import org.elasticsearch.xpack.esql.expression.function.Example;
+import org.elasticsearch.xpack.esql.expression.function.FunctionDefinition;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionType;
 import org.elasticsearch.xpack.esql.expression.function.Param;
 import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToDouble;
+import org.elasticsearch.xpack.esql.expression.function.scalar.histogram.HistogramPercentile;
 import org.elasticsearch.xpack.esql.expression.function.scalar.multivalue.MvPercentile;
+import org.elasticsearch.xpack.esql.expression.promql.function.PromqlFunctionDefinition;
 import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 
 import java.io.IOException;
@@ -34,6 +37,7 @@ import static java.util.Collections.singletonList;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.FIRST;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isFoldable;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNotNull;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isType;
 import static org.elasticsearch.xpack.esql.expression.Foldables.doubleValueOf;
 
@@ -43,6 +47,12 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
         "Percentile",
         Percentile::new
     );
+    public static final FunctionDefinition DEFINITION = FunctionDefinition.def(Percentile.class).binary(Percentile::new).name("percentile");
+    public static final PromqlFunctionDefinition PROMQL_DEFINITION = PromqlFunctionDefinition.def()
+        .acrossSeriesBinary(PromqlFunctionDefinition.QUANTILE, Percentile::new)
+        .description("Returns the φ-quantile (0 ≤ φ ≤ 1) of the values across the input vector.")
+        .example("quantile(0.9, http_request_duration_seconds)")
+        .name("quantile");
 
     private final Expression percentile;
 
@@ -70,18 +80,30 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
                     + "maximum value per row, and use the result with the `PERCENTILE` function",
                 file = "stats_percentile",
                 tag = "docsStatsPercentileNestedExpression"
-            ), }
+            ),
+            @Example(
+                description = "`PERCENTILE` can also operate on `exponential_histogram` fields, "
+                    + "approximating the percentile of the values which were used to construct the histograms.",
+                file = "exponential_histogram",
+                tag = "percentileExpHistoForDocs"
+            ),
+            @Example(
+                description = "`PERCENTILE` can also operate on `tdigest` and casted `histogram` fields, "
+                    + "approximating the percentile of the values which were used to construct the digests.",
+                file = "tdigest",
+                tag = "percentileTDigestForDocs"
+            ) }
     )
     public Percentile(
         Source source,
-        @Param(name = "number", type = { "double", "integer", "long" }) Expression field,
+        @Param(name = "number", type = { "double", "integer", "long", "exponential_histogram", "tdigest" }) Expression field,
         @Param(name = "percentile", type = { "double", "integer", "long" }) Expression percentile
     ) {
-        this(source, field, Literal.TRUE, percentile);
+        this(source, field, Literal.TRUE, NO_WINDOW, percentile);
     }
 
-    public Percentile(Source source, Expression field, Expression filter, Expression percentile) {
-        super(source, field, filter, singletonList(percentile));
+    public Percentile(Source source, Expression field, Expression filter, Expression window, Expression percentile) {
+        super(source, field, filter, window, singletonList(percentile));
         this.percentile = percentile;
     }
 
@@ -90,7 +112,8 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
             Source.readFrom((PlanStreamInput) in),
             in.readNamedWriteable(Expression.class),
             in.readNamedWriteable(Expression.class),
-            in.readNamedWriteableCollectionAsList(Expression.class).get(0)
+            readWindow(in),
+            in.readNamedWriteableCollectionAsList(Expression.class).getFirst()
         );
     }
 
@@ -101,17 +124,17 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
 
     @Override
     protected NodeInfo<Percentile> info() {
-        return NodeInfo.create(this, Percentile::new, field(), filter(), percentile);
+        return NodeInfo.create(this, Percentile::new, field(), filter(), window(), percentile);
     }
 
     @Override
     public Percentile replaceChildren(List<Expression> newChildren) {
-        return new Percentile(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2));
+        return new Percentile(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2), newChildren.get(3));
     }
 
     @Override
     public Percentile withFilter(Expression filter) {
-        return new Percentile(source(), field(), filter, percentile);
+        return new Percentile(source(), field(), filter, window(), percentile);
     }
 
     public Expression percentile() {
@@ -126,10 +149,10 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
 
         TypeResolution resolution = isType(
             field(),
-            dt -> dt.isNumeric() && dt != DataType.UNSIGNED_LONG,
+            dt -> (dt.isNumeric() && dt != DataType.UNSIGNED_LONG) || dt == DataType.EXPONENTIAL_HISTOGRAM || dt == DataType.TDIGEST,
             sourceText(),
             FIRST,
-            "numeric except unsigned_long"
+            "exponential_histogram, tdigest or numeric except unsigned_long"
         );
         if (resolution.unresolved()) {
             return resolution;
@@ -141,7 +164,7 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
             sourceText(),
             SECOND,
             "numeric except unsigned_long"
-        ).and(isFoldable(percentile, sourceText(), SECOND));
+        ).and(isFoldable(percentile, sourceText(), SECOND)).and(isNotNull(percentile, sourceText(), SECOND));
     }
 
     @Override
@@ -166,7 +189,11 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
     @Override
     public Expression surrogate() {
         var field = field();
+        DataType fieldType = field.dataType();
 
+        if (fieldType == DataType.EXPONENTIAL_HISTOGRAM || fieldType == DataType.TDIGEST) {
+            return new HistogramPercentile(source(), new HistogramMerge(source(), field, filter(), window()), percentile());
+        }
         if (field.foldable()) {
             return new MvPercentile(source(), new ToDouble(source(), field), percentile());
         }
